uploaded the U-net model, the architecture is directly derived from the paper but i need to improve the loss functions and other stuff in the training process, but right now it's segmenting ok :D

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+**/__pycache__/
 *.py[cod]
 *$py.class
 
 # C extensions
-*.so
+*.so 
+
+#dataset folders
+u-net/data/
+
 
 # Distribution / packaging
 .Python
